--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 /* Rules for sizing the icon. */
 .material-icons.md-18 {
   font-size: 18px;
@@ -42,6 +48,8 @@ body {
   margin: 0;
   width: 100vw;
   height: 100vh;
+  gap: 1rem;
+  overscroll-behavior: auto;
 }
 
 .body-grid > div {
@@ -52,13 +60,16 @@ body {
   /* flex-box most likely required */
   display: flex;
   align-items: end;
+  padding: 1rem;
+  text-align: start;
 }
 
 .container-names-library > span {
-  flex: auto 0 0;
+  margin-bottom: -14px;
   font-size: 5rem;
-  padding-left: 1rem;
   padding-bottom: 0.2rem;
+  flex-shrink: 1;
+  align-items: flex-start;
 }
 
 .container-names-library > span:nth-child(even) {
@@ -68,6 +79,8 @@ body {
 .container-button {
   display: flex;
   align-items: end;
+  padding-left: 1rem;
+  padding-bottom: 1rem;
 }
 
 .container-button > span {
@@ -95,4 +108,42 @@ body {
   font-size: 5rem;
   right: 82px;
   top: 12px;
+}
+
+.container-bookshelf {
+  display: grid;
+  align-items: stretch;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  gap: 1rem;
+  padding: 1rem;
+  overflow: scroll;
+}
+
+.book {
+  height: 560px;
+  display: grid;
+  gap: 0.75rem;
+  padding: 0.5rem 2.5rem;
+  grid-template-columns: 1fr;
+  grid-template-rows: 4fr 3fr 1fr;
+  border: black solid 8px;
+}
+
+.book > div {
+  border: black solid 2px;
+}
+
+.book > span {
+  transform: rotate(90deg);
+}
+
+.book-pages {
+  font-size: 2rem;
+  padding: 0.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0.5rem;
+  flex-grow: 1;
+  flex-shrink: 1;
 }
