--- a/style.css
+++ b/style.css
@@ -120,30 +120,52 @@ body {
 }
 
 .book {
-  height: 560px;
+  height: 760px;
   display: grid;
   gap: 0.75rem;
   padding: 0.5rem 2.5rem;
-  grid-template-columns: 1fr;
-  grid-template-rows: 4fr 3fr 1fr;
+  justify-content: center;
+  grid-auto-columns: min-content;
+  grid-auto-rows: auto;
   border: black solid 8px;
+  font-size: min(2rem);
+  overflow: scroll;
 }
 
 .book > div {
-  border: black solid 2px;
+  border: rgb(61, 61, 61) solid 2px;
+  writing-mode: vertical-rl;
 }
 
-.book > span {
-  transform: rotate(90deg);
+.book-author {
+  display: flex;
+  flex-shrink: 1;
+  justify-content: center;
+  align-items: center;
+}
+
+.book-name {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
 }
 
 .book-pages {
+  display: flex;
+  justify-content: end;
+  font-style: italic;
+}
+
+.book-pages > span {
   font-size: 2rem;
   padding: 0.2rem;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 0.5rem;
-  flex-grow: 1;
   flex-shrink: 1;
+  justify-content: center;
+  margin: 0 0.5rem;
+  writing-mode: horizontal-tb;
+}
+
+.outter-rotation {
+  position: relative;
 }
