--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+:root {
+  --shadow-color: 0deg 0% 59%;
+  --shadow-elevation-low: 0.4px 0.4px 0.7px hsl(var(--shadow-color) / 0.23),
+    0.7px 0.7px 1.3px -0.7px hsl(var(--shadow-color) / 0.33),
+    1.6px 1.7px 3px -1.5px hsl(var(--shadow-color) / 0.43);
+  --shadow-elevation-medium: 0.4px 0.4px 0.7px hsl(var(--shadow-color) / 0.24),
+    1.5px 1.7px 2.9px -0.5px hsl(var(--shadow-color) / 0.32),
+    3.4px 3.8px 6.5px -1px hsl(var(--shadow-color) / 0.4),
+    7.8px 8.6px 14.8px -1.5px hsl(var(--shadow-color) / 0.48);
+  --shadow-elevation-high: 0.4px 0.4px 0.7px hsl(var(--shadow-color) / 0.22),
+    3.1px 3.4px 5.9px -0.2px hsl(var(--shadow-color) / 0.26),
+    5.6px 6.2px 10.7px -0.4px hsl(var(--shadow-color) / 0.3),
+    8.7px 9.7px 16.6px -0.6px hsl(var(--shadow-color) / 0.33),
+    13.1px 14.5px 24.9px -0.9px hsl(var(--shadow-color) / 0.37),
+    19.4px 21.5px 36.9px -1.1px hsl(var(--shadow-color) / 0.41),
+    28.4px 31.5px 54.1px -1.3px hsl(var(--shadow-color) / 0.44),
+    40.7px 45.1px 77.5px -1.5px hsl(var(--shadow-color) / 0.48);
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -132,6 +151,7 @@ body {
   grid-auto-rows: auto;
   border: black solid 8px;
   font-size: 1.6rem;
+  box-shadow: var(--shadow-elevation-medium);
 }
 
 .book > div {
@@ -244,10 +264,12 @@ body {
 
 .read-color {
   background-color: rgb(130, 255, 173);
+  box-shadow: var(--shadow-elevation-high);
 }
 
 .unread-color {
   background-color: rgb(255, 105, 180);
+  box-shadow: var(--shadow-elevation-high);
 }
 
 .form-container {
@@ -342,15 +364,27 @@ label {
   width: 10rem;
   height: 5rem;
   align-self: center;
+  box-shadow: var(--shadow-elevation-medium);
+  transition: ease-in 0.05s;
+}
+
+.button-close:hover {
+  transform: scale(1.05);
+}
+
+.button-close:active {
+  transform: scale(0.95);
 }
 
 .modal {
-  width: 40vw;
+  width: clamp(30ch, 44ch, 40vw);
   height: fit-content;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  border: 0;
+  box-shadow: var(--shadow-elevation-high);
 }
 
 .modal::backdrop {
