--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ body {
 }
 
 .book > div:nth-child(-n + 2) span {
-  padding: 0.4rem;
+  padding: 0.8rem;
 }
 
 .book-pages > span {
@@ -199,6 +199,7 @@ body {
 .book-unread:hover {
   opacity: 1;
   transform: scale(1);
+  transform: rotate(0.0001deg);
 }
 
 .read {
