Apply pain to relearn JS functions and array methods

--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ body {
   align-items: center;
 }
 
-.book-name {
+.book-title {
   display: flex;
   align-items: center;
   justify-content: center;
