--- a/style.css
+++ b/style.css
@@ -140,7 +140,8 @@ body {
   overflow: scroll;
 }
 
-.book {
+.book,
+.demo {
   height: 760px;
   display: grid;
   gap: 0.75rem;
@@ -154,6 +155,11 @@ body {
 }
 
 .book > div {
+  border: rgb(0 0 0 / 0.3) double 6px;
+  writing-mode: vertical-rl;
+}
+
+.demo > div {
   border: rgb(0 0 0 / 0.3) double 6px;
   writing-mode: vertical-rl;
 }
@@ -178,7 +184,8 @@ body {
   font-style: italic;
 }
 
-.book > div:nth-child(-n + 2) span {
+.book,
+.demo > div:nth-child(-n + 2) span {
   padding: 0.8rem;
 }
 
@@ -392,6 +399,6 @@ label {
   background: rgb(0 0 0 / 0.4);
 }
 
-.hidden-book {
+.book-hidden {
   display: none;
 }
