--- a/style.css
+++ b/style.css
@@ -356,9 +356,14 @@ input[type="text"] {
 
 .legend-wrap {
   align-items: center;
+  justify-content: center;
   display: flex;
   padding: 1rem;
   padding-top: 2rem;
+  position: relative;
+}
+
+#top-legend {
   position: relative;
 }
 
@@ -366,7 +371,15 @@ label {
   font-size: 2.6rem;
 }
 
-.button-close {
+button {
+  border: 1px solid black;
+}
+
+button:focus {
+  outline: 0;
+}
+
+.button-submit {
   font-size: 2rem;
   margin: 1.6rem;
   width: 10rem;
@@ -376,12 +389,15 @@ label {
   transition: ease-in 0.05s;
 }
 
-.button-close:hover {
-  transform: scale(1.05);
+.button-submit:hover,
+.button-cancel:hover {
+  transform: scale(1.02);
 }
 
-.button-close:active {
-  transform: scale(0.95);
+.button-submit:active,
+.button-cancel:active {
+  transform: scale(0.96);
+  box-shadow: var(--shadow-elevation-low);
 }
 
 .modal {
@@ -409,9 +425,19 @@ label {
 
 .clickable:hover {
   transform: scale(1.02);
-  border: 6px solid rgb(66, 73, 73);
+  border: 6px solid lightslategray;
 }
 
 .clickable:active {
   transform: scale(0.98);
+}
+
+.button-cancel {
+  position: absolute;
+  right: 20px;
+  width: 3.4rem;
+  height: 3.4rem;
+  align-self: center;
+  box-shadow: var(--shadow-elevation-medium);
+  transition: ease-in 0.05s;
 }
