Fix bug where removing demo book removes library object on next click

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body {
   align-items: flex-start;
 }
 
-.container-names-library > span:first-child {
+.container-names-library > span:first-childgit a {
   font-style: italic;
 }
 
